# kiwisolver-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
audit/: upstream-kiwisolver-1.5.0-notes.md  upstream-native-surface.txt  upstream-test-inventory.txt
crates/kiwisolver-rust-python/: Cargo.toml
crates/kiwisolver-rust-python/src/: constraint.rs  errors.rs  expression.rs  lib.rs  solver.rs  strength.rs  variable.rs
crates/kiwisolver-rust-python/tests/: native_api.rs
docs/superpowers/plans/: 2026-04-17-kiwisolver-rust.md
docs/superpowers/specs/: 2026-04-17-kiwisolver-rust-design.md  2026-04-18-kiwisolver-rust-ci-design.md
python/kiwisolver/: __init__.py  _cext.py  _cext.pyi
tests/: run_python_compat.py  run_rustpython_compat.py
tests/python/: test_imports.py  test_repr_and_errors.py  test_upstream_expression_tranche2.py  test_upstream_simplex_tranche5.py  test_upstream_solver_tranche1.py  test_upstream_solver_tranche2.py  test_upstream_solver_tranche3.py  test_upstream_solver_tranche6.py  test_upstream_surface_tranche4.py
tests/upstream_cpp/: README.md
