[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "kiwisolver"
version = "1.5.0.dev0"
requires-python = ">=3.10"

[tool.maturin]
manifest-path = "crates/kiwisolver-rust-python/Cargo.toml"
python-source = "python"
module-name = "kiwisolver._kiwisolver_native"
include = [
  { path = "third_party/cassowary-fork/*", format = "sdist" },
  { path = "third_party/cassowary-fork/**/*", format = "sdist" },
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
